--- a/notes.wiki
+++ b/notes.wiki
@@ -318,7 +318,7 @@ san-miguel: 10470  3384   180   2150        4534
  white_oak: 11403  52     159   10885       4
 
  Added scan storage:
-             total  setup  bins  raster_low  raster_mid
+            total  setup  bins  raster_low  raster_mid
     #boxes: 1521   31     40    1388        4
      bunny: 416    79     30    253         4
 conference: 1214   61     72    949         4
@@ -331,3 +331,18 @@ san-miguel: 10132  3196   182   2165        4372
     sponza: 3694   116    89    3216        102
     teapot: 401    32     34    293         5
  white_oak: 11204  49     159   10836       4
+
+ Passing cull_flags through bin_quads:
+                 total  setup  bins  raster_low  raster_mid
+         #boxes: 1498   31     40    1367        4
+          bunny: 412    78     29    246         4
+     conference: 1208   61     75    947         4
+         dragon: 1110   461    50    369         176
+        gallery: 3182   842    68    1670        410
+       hairball: 13746  3696   299   301         9114
+     powerplant: 10963  3291   340   798         6403
+     san-miguel: 9893   3169   183   2138        4227
+      scrubPine: 565    14     55    451         5
+         sponza: 3728   119    89    3245        104
+         teapot: 396    32     34    288         5
+      white_oak: 11564  49     164   11001       5
