--- a/notes.wiki
+++ b/notes.wiki
@@ -271,161 +271,17 @@ san-miguel: 8886   964    179   2520        5040        -30
     teapot: 389    24     31    291         5
  white_oak: 12660  23     155   12347       4           -235
 
-
-Data storage in quad_setup (initial version):
-                 total  setup  bins  raster_low  raster_mid
-         #boxes: 1551   129    42    1317        4
-          bunny: 479    140    30    256         4
-     conference: 1223   69     75    945         4
-         dragon: 1395   610    50    457         217
-        gallery: 4063   1610   69    1695        444
-       hairball: 19974  8031   296   330         11118
-     powerplant: 12972  3939   347   828         7662
-     san-miguel: 11706  4695   187   2124        4512
-      scrubPine: 562    26     60    430         5
-         sponza: 3579   166    90    3072        100
-         teapot: 510    139    35    293         5
-      white_oak: 11110  99     153   10522       4
-
-Improved task management in quad_setup:
-            total  setup  bins  raster_low  raster_mid
-    #boxes: 1478   37     41    1335        4
-     bunny: 444    95     30    261         4
-conference: 1233   67     74    961         4
-    dragon: 1377   590    51    461         217
-   gallery: 4068   1609   68    1709        451
-  hairball: 19753  7631   293   326         11087
-powerplant: 12900  3912   339   819         7655
-san-miguel: 11492  4612   180   2077        4435
- scrubPine: 544    15     52    432         5
-    sponza: 3587   152    91    3088        98
-    teapot: 414    40     34    295         5
- white_oak: 10881  63     163   10498       5
-
- Added quad storage:
-            total  setup  bins  raster_low  raster_mid
-    #boxes: 1511   34     40    1380        4
-     bunny: 428    86     29    251         5
-conference: 1214   65     75    946         4
-    dragon: 1241   509    50    425         200
-   gallery: 3425   931    68    1776        458
-  hairball: 15396  4511   295   311         10134
-powerplant: 11795  3361   341   805         7096
-san-miguel: 10470  3384   180   2150        4534
- scrubPine: 558    14     52    443         5
-    sponza: 3694   124    85    3213        102
-    teapot: 394    34     33    286         5
- white_oak: 11403  52     159   10885       4
-
- Added scan storage:
-            total  setup  bins  raster_low  raster_mid
-    #boxes: 1521   31     40    1388        4
-     bunny: 416    79     30    253         4
-conference: 1214   61     72    949         4
-    dragon: 1136   458    50    387         188
-   gallery: 3251   849    67    1720        428
-  hairball: 13982  3673   299   310         9589
-powerplant: 11373  3300   341   829         6638
-san-miguel: 10132  3196   182   2165        4372
- scrubPine: 563    13     53    452         5
-    sponza: 3694   116    89    3216        102
-    teapot: 401    32     34    293         5
- white_oak: 11204  49     159   10836       4
-
- Passing cull_flags through bin_quads:
-            total  setup  bins  raster_low  raster_mid
-    #boxes: 1498   31     40    1367        4
-     bunny: 412    78     29    246         4
-conference: 1208   61     75    947         4
-    dragon: 1110   461    50    369         176
-   gallery: 3182   842    68    1670        410
-  hairball: 13746  3696   299   301         9114
-powerplant: 10963  3291   340   798         6403
-san-miguel: 9893   3169   183   2138        4227
- scrubPine: 565    14     55    451         5
-    sponza: 3728   119    89    3245        104
-    teapot: 396    32     34    288         5
- white_oak: 11564  49     164   11001       5
-
-Removed quad_indices & tri_aabbs:
-            total  setup  bins  raster_low  raster_mid
-    #boxes: 1487   29     37    1365        4
-     bunny: 409    75     30    247         5
-conference: 1195   59     68    935         4
-    dragon: 1050   423    51    353         170
-   gallery: 3079   785    67    1636        399
-  hairball: 12983  3381   295   300         8920
-powerplant: 10442  3023   280   790         6205
-san-miguel: 9566   2926   182   2129        4150
- scrubPine: 557    13     51    447         5
-    sponza: 3694   114    86    3226        101
-    teapot: 395    31     31    286         5
- white_oak: 11211  45     171   10842       5
-
- Increased LSIZE in raster_medium to 1024:
-            total  setup  bins  raster_low  raster_mid
-    dragon: 1038   428    50    352         155
-   gallery: 3002   787    66    1642        329
-  hairball: 12534  3350   292   294         8386
-powerplant: 10022  3023   280   786         5786
-san-miguel: 9446   2905   179   2106        4081
-
-Keeping depth_eq data together:
-            total  setup  bins  raster_low  raster_mid
-    #boxes: 1508   24     37    1392        5
-     bunny: 400    66     29    250         4
-conference: 1207   57     71    948         4
-    dragon: 993    377    50    356         155
-   gallery: 2971   710    68    1686        344
-  hairball: 11919  2921   295   293         8287
-powerplant: 9776   2770   284   799         5788
-san-miguel: 9299   2693   179   2116        4153
- scrubPine: 544    12     49    439         5
-    sponza: 3621   102    88    3187        69
-    teapot: 382    25     30    284         4
- white_oak: 11571  40     159   11205       4
-
- Separated instance_color & unormal:
-            total  setup  bins  raster_low  raster_mid  vs no-shared-storage
-    #boxes: 1447   23     39    1333        4           -74
-     bunny: 377    57     29    246         4           +6
-conference: 1200   55     70    955         4           -52
-    dragon: 922    333    50    349         153         -39
-   gallery: 2824   605    68    1656        330         -116
-  hairball: 11389  2302   293   301         8371        -1085
-powerplant: 9787   2651   286   825         5795        -1973
-san-miguel: 8943   2430   176   2097        4127        +57
- scrubPine: 559    13     50    457         4           -27
-    sponza: 3561   97     87    3156        69          -198
-    teapot: 385    24     30    294         5           -4
- white_oak: 11313  33     169   10978       5           -1347
- 
-uvec4 storage:
-            total  setup  bins  raster_low  raster_mid
-    #boxes: 1435   19     37    1324        5
-     bunny: 378    56     30    246         4
-conference: 1193   53     70    947         4
-    dragon: 881    302    49    345         150
-   gallery: 2755   570    66    1638        328
-  hairball: 11102  2007   294   299         8287
-powerplant: 9695   2602   282   818         5886
-san-miguel: 8875   2348   178   2125        4081
- scrubPine: 560    12     52    456         4
-    sponza: 3551   92     97    3140        69
-    teapot: 379    22     30    293         5
- white_oak: 11325  29     171   10962       5
-
- Optimized tri storage in quad_setup:
-            total  setup  bins  raster_low  raster_mid
-    #boxes: 1448   18     38    1342        4
-     bunny: 374    53     29    250         5
-conference: 1202   51     71    956         5
-    dragon: 883    293    50    347         151
-   gallery: 2766   552    67    1657        332
-  hairball: 10765  1790   295   296         8300
-powerplant: 9474   2569   283   797         5731
-san-miguel: 8858   2334   179   2111        4093
- scrubPine: 560    11     53    454         5
-    sponza: 3584   90     108   3160        69
-    teapot: 386    19     30    295         4
- white_oak: 11452  29     166   10984       4
+ Tri/Quad data storage in quad_setup:
+            total  setup  bins  raster_low  raster_mid  CHANGE
+    #boxes: 1448   18     38    1342        4           -73
+     bunny: 374    53     29    250         5           +3
+conference: 1202   51     71    956         5           -50
+    dragon: 883    293    50    347         151         -78
+   gallery: 2766   552    67    1657        332         -174
+  hairball: 10765  1790   295   296         8300        -1709
+powerplant: 9474   2569   283   797         5731        -2286
+san-miguel: 8858   2334   179   2111        4093        -28
+ scrubPine: 560    11     53    454         5           -26
+    sponza: 3584   90     108   3160        69          -175
+    teapot: 386    19     30    295         4           -3
+ white_oak: 11452  29     166   10984       4           -1208
